--- a/task1_git_practice/index.html
+++ b/task1_git_practice/index.html
@@ -11,6 +11,7 @@
   <img src="images/im3.png" alt="im3">
   <img src="images/im4.png" alt="im4">
   <img src="images/im5.png" alt="im5">
+  <img src="images/im6.png" alt="im6">
 </body>
 </html>
 
